--- a/heroku.yml
+++ b/heroku.yml
@@ -2,5 +2,5 @@ build:
   docker:
     web: Dockerfile
   config:
-    ENV: prod
+    ENV: PROD
     REDIS_URL: https://shuttleup-redis-server.herokuapp.com
